hphp/test/zend/bad/ext/pgsql/tests/27large_object_oid.php.skipif
<?php 
include("skipif.inc"); 
$v = pg_version($conn);
if (version_compare("8.3", $v["client"]) > 0) die("skip - requires pg client >= 8.3\n");
if (version_compare("8.3", $v["server"]) > 0) die("skip - requires pg server >= 8.3\n");
?>